cmake_minimum_required(VERSION 3.29)
project(Data_Sructures_And_Algorithms)

set(CMAKE_CXX_STANDARD 17)

add_executable(Data_Sructures_And_Algorithms
        #        big_o/big_o.cpp
        #        big_o/find_nemo.cpp
        #        big_o/rule1.cpp
        #        big_o/rule2.cpp
        #        big_o/rule3.cpp
        big_o/rule4.cpp
)
