cmake_minimum_required(VERSION 3.29)
project(Data_Structures_And_Algorithms)

set(CMAKE_CXX_STANDARD 17)

add_executable(Data_Structures_And_Algorithms
        #        big_o/big_o.cpp
        #        big_o/find_nemo.cpp
        #        big_o/rule1.cpp
        #        big_o/rule2.cpp
        #        big_o/rule3.cpp
        #        big_o/rule4.cpp
        #        big_o/space_complexity.cpp
        #        big_o/twitter.cpp
        big_o/log_all_pairs.cpp
        big_o/exercise_1_solution.cpp
        big_o/exercise_2_solution.cpp
)
